Fix vertical container spacing

--- a/index.css
+++ b/index.css
@@ -37,7 +37,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     width: 15%;
-    margin-top: 30px;
+    margin: 12px 6px 0px 6px;
 }
 
 .team-name, .period-header {
